{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 45,
  "lineage": "41143f0b-820b-7882-2b38-a2ab41f4a6e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tfi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:011659404441:instance/i-09d89b14e2c80a084",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d89b14e2c80a084",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tcw",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0100cd204d009ccd5",
            "private_dns": "ip-192-172-2-41.ec2.internal",
            "private_ip": "192.172.2.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058778a65cc8abf69",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e047fae290ece616",
            "tags": {
              "Name": "TF-EC2"
            },
            "tags_all": {
              "Name": "TF-EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b8ef30222ee72930"
            ]
          },
          "dependencies": [
            "aws_security_group.TF_SG",
            "aws_subnet.TF_subnet",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TF_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:internet-gateway/igw-057dcb1c2f43d395b",
            "id": "igw-057dcb1c2f43d395b",
            "owner_id": "011659404441",
            "tags": {
              "Name": "TF_igw"
            },
            "tags_all": {
              "Name": "TF_igw"
            },
            "vpc_id": "vpc-035dd0bc68dd16263"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-057dcb1c2f43d395b",
            "id": "r-rtb-0cf3326fdb9ad556d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf3326fdb9ad556d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TF_igw",
            "aws_route_table.TF_RT",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TF_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:route-table/rtb-0cf3326fdb9ad556d",
            "id": "rtb-0cf3326fdb9ad556d",
            "owner_id": "011659404441",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "TF_RT"
            },
            "tags_all": {
              "Name": "TF_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-035dd0bc68dd16263"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03874371b797f5395",
            "route_table_id": "rtb-0cf3326fdb9ad556d",
            "subnet_id": "subnet-0e047fae290ece616"
          },
          "dependencies": [
            "aws_route_table.TF_RT",
            "aws_subnet.TF_subnet",
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TF_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:security-group/sg-0b8ef30222ee72930",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound ruls",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8ef30222ee72930",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "all_Trafic",
            "name_prefix": "",
            "owner_id": "011659404441",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_SG_all_trafic"
            },
            "tags_all": {
              "Name": "TF_SG_all_trafic"
            },
            "timeouts": null,
            "vpc_id": "vpc-035dd0bc68dd16263"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TF_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:subnet/subnet-0e047fae290ece616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.172.0.0/20",
            "id": "subnet-0e047fae290ece616",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011659404441",
            "tags": {
              "Name": "TF_subnet1"
            },
            "tags_all": {
              "Name": "TF_subnet1"
            },
            "vpc_id": "vpc-035dd0bc68dd16263"
          },
          "dependencies": [
            "aws_vpc.TF_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TF_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011659404441:vpc/vpc-035dd0bc68dd16263",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.172.0.0/16",
            "default_network_acl_id": "acl-005cf9ed35200738a",
            "default_route_table_id": "rtb-05947759b0c3d4a49",
            "default_security_group_id": "sg-04c32d86193ea9a63",
            "dhcp_options_id": "dopt-3bbcbc41",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-035dd0bc68dd16263",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05947759b0c3d4a49",
            "owner_id": "011659404441",
            "tags": {
              "Name": "TF_VPC"
            },
            "tags_all": {
              "Name": "TF_VPC"
            }
          }
        }
      ]
    }
  ]
}